# kokkos-openmptarget-examples

./: Makefile.inc  README.md
LambdaPerformanceTests/: CMakeLists.txt  Makefile  axpby.hpp  dot.hpp  main.cpp
Reduction/: Makefile  main.cpp  reduction.hpp
Reduction/custom/: Makefile  custom_reduction.hpp  main.cpp
Scan/: Makefile  main.cpp  scan.hpp
Scratch/: Makefile  README.md  main.back1  main.back2  main.back3  main.back4  main.cpp
axpy/: Makefile  axpy.hpp  main.cpp
cgsolve/: Makefile  cgsolve.hpp  generate_matrix.hpp  main.cpp
concurrency/: Makefile  main.cpp
dot/: dot.hpp  main.cpp
matvec/: Makefile  main.cpp  matvec.hpp
